@@ -984,6 +984,15 @@ C API
 Documentation
 -------------
 
+- Issue #30052: the link targets for ``:func:\`bytes\``` and
+  ``:func:\`bytearray\``` are now their respective type definitions, rather
+  than the corresponding builtin function entries. Use ``:ref:\`func-bytes\```
+  and ``:ref:\`func-bytes\``` to reference the latter.
+
+  In order to ensure this and future cross-reference updates are applied
+  automatically, the daily documentation builds now disable the default
+  output caching features in Sphinx.
+
 - bpo-26985: Add missing info of code object in inspect documentation.
 
 - bpo-19824, bpo-20314, bpo-12518: Improve the documentation for, and links
